Update Courses, firebaseDEV

--- a/.env
+++ b/.env
@@ -5,3 +5,11 @@ REACT_APP_FIREBASE_PROJECT_ID=golsscorecard
 REACT_APP_FIREBASE_STORAGE_BUCKET=golsscorecard.appspot.com
 REACT_APP_FIREBASE_SENDER_ID=675185572007
 REACT_APP_FIREBASE_APP_ID=1:675185572007:web:a74e497a26c67f77e84382
+
+REACT_APP_DEV_FIREBASE_API_KEY=AIzaSyCt0E_aEpWGClMOBkw-EH-tDzg9l48bx10
+REACT_APP_DEV_FIREBASE_AUTH_DOMAIN=golfscorecarddev.firebaseapp.com
+REACT_APP_DEV_FIREBASE_DB_URL=https://golfscorecarddev.firebaseio.com
+REACT_APP_DEV_FIREBASE_PROJECT_ID=golfscorecarddev
+REACT_APP_DEV_FIREBASE_STORAGE_BUCKET=golfscorecarddev.appspot.com
+REACT_APP_DEV_FIREBASE_SENDER_ID=675185572007
+REACT_APP_DEV_FIREBASE_APP_ID=1:675185572007:web:a74e497a26c67f77e84382
