--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "react-slick": "^0.26.1",
     "slick-carousel": "^1.8.1",
     "styled-components": "5.1.1",
-    "uuidv4": "6.1.0",
-    "lodash": ">=4.17.19"
+    "uuidv4": "6.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
